# ndk-samples

sensor-graph/accelerometer/: build.gradle
sensor-graph/accelerometer/src/androidTest/cpp/: nativeTestRunner.cpp  test_accelerometer.cpp
sensor-graph/accelerometer/src/androidTest/java/com/android/accelerometergraph/: ExampleInstrumentedTest.java  NativeTestRunner.java  NativeUnitTests.java
sensor-graph/accelerometer/src/main/cpp/: CMakeLists.txt  sensorgraph.cpp  sensorgraph.h
